--- a/index.html
+++ b/index.html
@@ -1,36 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>JavaScript and the DOM</title>
-        <link href="css/style.css" rel="stylesheet">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HiTech</title>
+    <link rel = "preconnect" href ="https://fonts.googleapis.com">
+    <link rel ="preconnect" hred="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,700;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
-    <body>
-        <div class ="wrapper">
-            <header>
-                <h1 id="headline">My Day</h1>
-                <div class = "group">
-                    <label for ="main">What's your task?</label>
-                    <input type ="text" id ="main" class ="input-main">
-                    <button class ="btn-main">Add Task</button>
-                </div>
-            </header>
 
-            <button class="btn-toggle">Hide List</button>
+<body>
+    <div id="container">
 
-            <div class="list-container">
-                <ul aria-live="polite">
-                    <li>Meditate</li>
-                    <li class = 'highlight'>Practice JavaScript</li>
-                    <li>Walk the dog</li>
-                    <li class = 'highlight'>Go Swimming</li>
-                    <li class = 'highlight'>Write diary</li>
-                </ul>
-                <!-- <button class="btn-remove">Remove Last Task</button> -->
+        <nav>
+            <ul>
+                <li><a href="samsung.html">Samsung</a></li>
+                <li><a href="apple.html">Apple</a></li>
+                <li><a href="home.html">Home</a></li>
+ 
+            </ul>
+        </nav>
+
+
+        <article>
+            <div class="carousel" >
+                <!-- <img src="image/apple.png" alt="Apple Logo" title= "Apple Logo"> -->
+                <h3>Device User Guide</h3>
+                <p>Here you will find the instructions to help you with your device issues</p>
             </div>
-        </div>
-        <script src="js/app.js"></script>
-    </body>
+
+            <div class = "border">
+            <p>This website is to help you with your devices and instructions showing you how to back up your phone, turn your laptop on and change the text size as well as some other instructions. </p>
+            </div>
+
+            <h3>Supported Brands</h3>
+
+        </article>
+
+        <footer>&copy;HiTech 2022</footer>
+    </div>
+</body>
 </html>
