Jess first codeing
changed a few things.
changed so the home index.hmtl would work

Started working on Samsung and apple pages

--- a/iphone.html
+++ b/iphone.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-
+<!-- Jess -->
 <body>
     <div id="container">
 
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="samsung.html">Samsung</a></li>
                 <li><a href="apple.html">Apple</a></li>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
  
             </ul>
         </nav>
