--- a/samsung.html
+++ b/samsung.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-
+<!-- JESS -->
 <body>
     <div id="container">
 
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="samsung.html">Samsung</a></li>
                 <li><a href="apple.html">Apple</a></li>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
  
             </ul>
         </nav>
@@ -28,15 +28,25 @@
         <article>
             <div class="carousel" >
                 <!-- <img src="image/apple.png" alt="Apple Logo" title= "Apple Logo"> -->
-                <h3>Device User Guide</h3>
-                <p>Here you will find the instructions to help you with your device issues</p>
+                <h3>Samsung User Guide</h3>
+                <p>Everything you need to know about Samsung products</p>
             </div>
 
-            <div class = "border">
-            <p>This website is to help you with your devices and instructions showing you how to back up your phone, turn your laptop on and change the text size as well as some other instructions. </p>
-            </div>
+            <!-- <div class = "border">
+            <p>This page is currently under construction. Please come back later </p>
+            </div> -->
 
-            <h3>Supported Brands</h3>
+            <div class="object">
+                <div class="object-rope"></div>
+                <div class="object-shape">
+                  Coming <span class="soon">Soon</span>
+                </div>
+            </div>
+            
+            <div class="content">
+              <p class="message">This page is currently under construction. Please come back later .</p>
+
+            </div>
 
         </article>
 
