--- a/apple.html
+++ b/apple.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="samsung.html">Samsung</a></li>
                 <li><a href="apple.html">Apple</a></li>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
  
             </ul>
         </nav>
@@ -28,15 +28,26 @@
         <article>
             <div class="carousel" >
                 <!-- <img src="image/apple.png" alt="Apple Logo" title= "Apple Logo"> -->
-                <h3>Device User Guide</h3>
-                <p>Here you will find the instructions to help you with your device issues</p>
+                <h3>Apple User Guide</h3>
+                <p>Everything you need to know about Apple Products.</p>
             </div>
 
             <div class = "border">
             <p>This website is to help you with your devices and instructions showing you how to back up your phone, turn your laptop on and change the text size as well as some other instructions. </p>
             </div>
 
-            <h3>Supported Brands</h3>
+            <div class="flex-container-products">
+                <div><img src="image/iphone.png" alt="Iphone" ></div>
+                <div><img src="image/ipad.png" alt="Iphone" ></div>
+                <div><img src="image/mac.png" alt="Iphone" ></div>  
+              </div>
+
+              <div class="flex-container-text">
+                <div>Here is your iPhone User Guide: Here you will find the instructions to help you with your iPhone.</div>
+                <div></div>
+                <div></div>  
+              </div>
+
 
         </article>
 
