Added apple image to Homepage

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
         <article>
             <div class="carousel" >
-                <!-- <img src="image/apple.png" alt="Apple Logo" title= "Apple Logo"> -->
+                <div class = "apple">
+                    <img src="image/apple.png" alt="Apple Logo" title= "Apple Logo">
+                </div>
                 <h3>Device User Guide</h3>
                 <p>Here you will find the instructions to help you with your device issues</p>
             </div>
