Initial instruction page

--- a/instructions.html
+++ b/instructions.html
@@ -11,10 +11,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-
-<body>
-    <div id="container">
-
         <nav>
             <ul>
                 <li><a href="samsung.html">Samsung</a></li>
@@ -23,24 +19,39 @@
  
             </ul>
         </nav>
+<body>
+  <div id="container">
+
+  <ul class="breadcrumb">
+    <li><a href="#">Apple</a></li>
+    <i class="arrow right"></i>
+    <li><a href="#">Iphone</a></li>
+    <i class="arrow right"></i>
+    <li><a href="#">How to change font size</a></li>
+
+  </ul>
+    <div id="container">
 
 
-        <article>              
-            <div class="carousel" >
-                <!-- <img src="image/apple.png" alt="Apple Logo" title= "Apple Logo"> -->
-                <h3>Device User Guide</h3>
-                <p>Here you will find the instructions to help you with your device issues</p>
+
+                <h3>How to change the font size</h3>
+        <article>
+
+            <div class = "stepBorder">
+              <h4>Four step process</h4>
+              <ul class = "fourStep">
+                <li><a>1. First step is to go into the settings menu</a></li>
+                <li><a>2. Scroll down and click on Display and Brightness</a></li>
+                <li><a>3. Then select text size</a></li>
+                <li><a>4. Drag the slider up or down to select the font size you want</a></li>
+            </ul>
             </div>
 
-            <div class = "border">
-            <p>This website is to help you with your devices and instructions showing you how to back up your phone, turn your laptop on and change the text size as well as some other instructions. </p>
-            </div>
 
-            <h3>Supported Brands</h3>
 
         </article>
-
+</div>
         <footer>&copy;HiTech 2022</footer>
-    </div>
+    
 </body>
 </html>
