--- a/apple.html
+++ b/apple.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class="flex-container-products">
-                <div><img src="image/iphone.png" alt="Iphone" ></div>
+                <div><a href="iphone.html"> <img src="image/iphone.png" alt="Iphone" ></a></div>
                 <div><img src="image/ipad.png" alt="Iphone" ></div>
                 <div><img src="image/mac.png" alt="Iphone" ></div>  
               </div>
