Updated Breadcrumbs -Madi

--- a/iphone.html
+++ b/iphone.html
@@ -15,7 +15,7 @@
 <body>
     <div id="container">
 
-        <nav>
+        <nav id = "nav">
             <ul>
                 <li><a href="samsung.html">Samsung</a></li>
                 <li><a href="apple.html">Apple</a></li>
@@ -24,18 +24,15 @@
             </ul>
         </nav>
 
+        <ul class="breadcrumb">
+            <li><a href="#">Apple</a></li>
+            <i class="arrow right"></i>
+            <li><a href="#">iPhone User Guide</a></li>
+        </ul>
+
 
         <article>
-            <div class="carousel" >
-                <!-- <img src="image/apple.png" alt="Apple Logo" title= "Apple Logo"> -->
-                <h3>Device User Guide</h3>
-                <p>Here you will find the instructions to help you with your device issues</p>
-            </div>
-
-            <div class = "border">
-            <p>This website is to help you with your devices and instructions showing you how to back up your phone, turn your laptop on and change the text size as well as some other instructions. </p>
-            </div>
-
+            
             <h3>Supported Brands</h3>
 
         </article>
