--- a/instructions.html
+++ b/instructions.html
@@ -15,7 +15,7 @@
 <body>
   <div id="container">
 
-    <nav>
+    <nav id = "nav">
         <ul>
             <li><a href="samsung.html">Samsung</a></li>
             <li><a href="apple.html">Apple</a></li>
@@ -27,7 +27,7 @@
     <ul class="breadcrumb">
         <li><a href="#">Apple</a></li>
         <i class="arrow right"></i>
-        <li><a href="#">Iphone</a></li>
+        <li><a href="#">iPhone User Guide</a></li>
         <i class="arrow right"></i>
         <li><a href="#">How to change font size</a></li>
 
@@ -35,7 +35,7 @@
 
     <h3>How to change the font size</h3>
     <article>
-        <div class = "stepBorder">
+        <div class = "instructionsBorder">
             <h4>Four step process</h4>
             <ul class = "fourStep">
             <li><a>1. First step is to go into the settings menu</a></li>
