--- a/samsung.html
+++ b/samsung.html
@@ -15,7 +15,7 @@
 <body>
     <div id="container">
 
-        <nav>
+        <nav id = "nav">
             <ul>
                 <li><a href="samsung.html">Samsung</a></li>
                 <li><a href="apple.html">Apple</a></li>
