--- a/instructions.html
+++ b/instructions.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-        <nav>
+        <nav id = "nav">
             <ul>
                 <li><a href="samsung.html">Samsung</a></li>
                 <li><a href="apple.html">Apple</a></li>
@@ -23,11 +23,11 @@
   <div id="container">
 
   <ul class="breadcrumb">
-    <li><a href="#">Apple</a></li>
+    <li><a href="apple.html">Apple</a></li>
     <i class="arrow right"></i>
-    <li><a href="#">Iphone</a></li>
+    <li><a href="iphone.html">Iphone</a></li>
     <i class="arrow right"></i>
-    <li><a href="#">How to change font size</a></li>
+    <li><a href="instructions.html">How to change font size</a></li>
 
   </ul>
     <div id="container">
@@ -37,7 +37,7 @@
                 <h3>How to change the font size</h3>
         <article>
 
-            <div class = "stepBorder">
+            <div class = "instructionsBorder">
             
               <ul class = "fourStep">
                 <li>  <b>Four step process</b>
