--- a/apple.html
+++ b/apple.html
@@ -42,6 +42,14 @@
                 <div><img src="image/mac.png" alt="Iphone" ></div>  
             </div>
 
+            <div class="flex-container-text">
+              <div>Here is your iPhone User Guide:Here you will find the instructions to help you with your iPhone.</div>
+              <div></div>
+              <div></div>  
+            </div>
+
+            </div>
+
 
         </article>
 
