--- a/instructions.html
+++ b/instructions.html
@@ -36,6 +36,10 @@
 
                 <h3>How to change the font size</h3>
         <article>
+          <video width="1200" controls>
+            <source src="movie.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
 
             <div class = "instructionsBorder">
             
