moving image plus more additives
Add js for our moving image! YAY got it working. Added a JS  for that

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
 
         <article>
             <div class="carousel" >
-                <div class = "apple">
-                    <img src="image/apple.png" alt="Apple Logo" title= "Apple Logo">
-                </div>
+                <img name="slide" width="auto">
                 <h3>Device User Guide</h3>
                 <p>Here you will find the instructions to help you with your device issues</p>
             </div>
@@ -41,8 +39,10 @@
             <h3>Supported Brands</h3>
 
         </article>
+    
 
         <footer>&copy;HiTech 2022</footer>
     </div>
 </body>
+<script src="carousel.js"></script>
 </html>
