--- a/samsung.html
+++ b/samsung.html
@@ -9,6 +9,7 @@
     <link rel ="preconnect" hred="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,700;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+   
 </head>
 
 <!-- JESS -->
@@ -27,14 +28,10 @@
 
         <article>
             <div class="carousel" >
-                <!-- <img src="image/apple.png" alt="Apple Logo" title= "Apple Logo"> -->
+                <!-- <img name="slide" width="400" height="200" /> -->
                 <h3>Samsung User Guide</h3>
                 <p>Everything you need to know about Samsung products</p>
             </div>
-
-            <!-- <div class = "border">
-            <p>This page is currently under construction. Please come back later </p>
-            </div> -->
 
             <div class="object">
                 <div class="object-rope"></div>
@@ -47,7 +44,6 @@
               <p class="message">This page is currently under construction. Please come back later .</p>
 
             </div>
-
         </article>
 
         <footer>&copy;HiTech 2022</footer>
