Started creating grid for iphone

--- a/iphone.html
+++ b/iphone.html
@@ -9,6 +9,7 @@
     <link rel ="preconnect" hred="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,700;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/grid.css">
 </head>
 
 <!-- Jess -->
@@ -29,19 +30,13 @@
             <i class="arrow right"></i>
             <li><a href="#">iPhone User Guide</a></li>
         </ul>
+
+        <div class="grid">
+            <div class="item">1</div>
+            <div class="item">2</div>
+          </div>
+
         <article>
-            <div class="carousel" >
-                <!-- <img src="image/apple.png" alt="Apple Logo" title= "Apple Logo"> -->
-                <h3>Device User Guide</h3>
-                <p>Here you will find the instructions to help you with your device issues</p>
-            </div>
-
-            <div class = "border">
-            <p>This website is to help you with your devices and instructions showing you how to back up your phone, turn your laptop on and change the text size as well as some other instructions. </p>
-            </div>
-
- 
-
         </article>
 
         <footer>&copy;HiTech 2022</footer>
