--- a/apple.html
+++ b/apple.html
@@ -37,20 +37,25 @@
             </div>
 
             <div class="flex-container-products">
-                <div><a href="iphone.html"> <img src="image/iphone.png" alt="Iphone" ></a></div>
-                <div><img src="image/ipad.png" alt="Iphone" ></div>
-                <div><img src="image/mac.png" alt="Iphone" ></div>  
+            <br>
+            <br>
+            <br>
+                Here is your iPhone User Guide: Here you will find the instructions to help you with your iPhone. Click the image below to see your guide.
+                <div>
+                    <a href="iphone.html"> <img src="image/iphone.png" alt="Iphone" ></a>
+                </div>
+
+                Here is your iPad User Guide: Here you will find the instructions to help you with your iPad. Click the image below to see your guide.
+                <div>
+                    <img src="image/ipad.png" alt="Iphone" >
+                </div>
+
+                Here is your iMac User Guide: Here you will find the instructions to help you with your iMac. Click the image below to see your guide.
+
+                <div>
+                    <img src="image/mac.png" alt="Iphone" >
+                </div>  
             </div>
-
-            <div class="flex-container-text">
-              <div>Here is your iPhone User Guide:Here you will find the instructions to help you with your iPhone.</div>
-              <div></div>
-              <div></div>  
-            </div>
-
-            </div>
-
-
         </article>
 
         <footer>&copy;HiTech 2022</footer>
