--- a/apple.html
+++ b/apple.html
@@ -33,7 +33,7 @@
             </div>
 
             <div class = "border">
-            <p>This website is to help you with your devices and instructions showing you how to back up your phone, turn your laptop on and change the text size as well as some other instructions. </p>
+            <p>This page is to help you with your apple devices showing you how to back up your phone, turn your laptop on and change the text size as well as some other instructions. </p>
             </div>
 
             <div class="flex-container-products">
