--- a/iphone.html
+++ b/iphone.html
@@ -32,7 +32,7 @@
         </ul>
 
         <div class="grid">
-            <div class="item">1</div>
+            <div class="item"></div>
             <div class="item">2</div>
           </div>
 
