--- a/instructions.html
+++ b/instructions.html
@@ -37,8 +37,8 @@
 
                 <h3>How to change the font size</h3>
         <article>
-          <video width="1200" controls>
-            <source src="movie.mp4" type="video/mp4">
+          <video width="1130" controls>
+            <source src="video/text_size.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
 
