added js files to js folder

--- a/index.html
+++ b/index.html
@@ -45,5 +45,5 @@
         <footer>&copy;HiTech 2022</footer>
     </div>
 </body>
-<script src="carousel.js"></script>
+<script src="js/carousel.js"></script>
 </html>
