--- a/instructions.html
+++ b/instructions.html
@@ -77,7 +77,7 @@
         </div>
     </div>
 
-    <script src="quiz.js"></script>
+    <script src="js/quiz.js"></script>
         <footer>&copy;HiTech 2022</footer>
     
 </body>
