--- a/samsung.html
+++ b/samsung.html
@@ -25,6 +25,12 @@
             </ul>
         </nav>
 
+        <ul class="breadcrumb">
+            <li><a href="index.html">Home</a></li>
+            <i class="arrow right"></i>
+            <li><a href="samsung.html">Samsung</a></li>
+        </ul>
+
 
         <article>
             <div class="carousel" >
