--- a/apple.html
+++ b/apple.html
@@ -24,6 +24,13 @@
             </ul>
         </nav>
 
+        <ul class="breadcrumb">
+            <li><a href="index.html">Home</a></li>
+            <i class="arrow right"></i>
+            <li><a href="apple.html">Apple</a></li>
+            <i class="arrow right"></i>
+        </ul>
+
 
         <article>
             <div class="carousel" >
