--- a/instructions.html
+++ b/instructions.html
@@ -24,14 +24,15 @@
   <div id="container">
 
   <ul class="breadcrumb">
+    <li><a href="index.html">Home</a></li>
+    <i class="arrow right"></i>
     <li><a href="apple.html">Apple</a></li>
     <i class="arrow right"></i>
     <li><a href="iphone.html">Iphone</a></li>
     <i class="arrow right"></i>
     <li><a href="instructions.html">How to change font size</a></li>
-
   </ul>
-    <div id="container">
+    
 
 
 
