--- a/iphone.html
+++ b/iphone.html
@@ -26,6 +26,8 @@
         </nav>
 
         <ul class="breadcrumb">
+            <li><a href="index.html">Home</a></li>
+            <i class="arrow right"></i>
             <li><a href="#">Apple</a></li>
             <i class="arrow right"></i>
             <li><a href="#">iPhone User Guide</a></li>
