--- a/instructions.html
+++ b/instructions.html
@@ -56,7 +56,7 @@
         </article>
 </div>
 
-  After finishing watching the video please fill out the quiz to see how much you understood. There are four questions. 
+  <p id="quiz-intro">After finishing watching the video please fill out the quiz to see how much you understood. There are four questions. </p>
 
   <br>
   <br>
