--- a/apple.html
+++ b/apple.html
@@ -34,10 +34,12 @@
 
         <article>
             <div class="carousel" >
-                <!-- <img src="image/apple.png" alt="Apple Logo" title= "Apple Logo"> -->
+                <img name="slide" width="auto">
                 <h3>Apple User Guide</h3>
                 <p>Everything you need to know about Apple Products.</p>
             </div>
+
+        
 
             <div class = "border">
             <p>This page is to help you with your apple devices showing you how to back up your phone, turn your laptop on and change the text size as well as some other instructions. </p>
@@ -67,5 +69,6 @@
 
         <footer>&copy;HiTech 2022</footer>
     </div>
+    <script src="js/carousel_2.js"></script>
 </body>
 </html>
