added logo up to top

--- a/apple.html
+++ b/apple.html
@@ -13,9 +13,12 @@
 
 
 <body>
+    
     <div id="container">
+       
 
         <nav id = "nav">
+            <img src="image/logo.png" alt="logo" class="logo">
             <ul>
                 <li><a href="samsung.html">Samsung</a></li>
                 <li><a href="apple.html">Apple</a></li>
