--- a/instructions.html
+++ b/instructions.html
@@ -13,6 +13,7 @@
 </head>
 
         <nav id = "nav">
+          <img src="image/logo.png" alt="logo" class="logo">
             <ul>
                 <li><a href="samsung.html">Samsung</a></li>
                 <li><a href="apple.html">Apple</a></li>
