--- a/samsung.html
+++ b/samsung.html
@@ -17,6 +17,7 @@
     <div id="container">
 
         <nav id = "nav">
+            <img src="image/logo.png" alt="logo" class="logo">
             <ul>
                 <li><a href="samsung.html">Samsung</a></li>
                 <li><a href="apple.html">Apple</a></li>
