--- a/iphone.html
+++ b/iphone.html
@@ -33,15 +33,67 @@
             <li><a href="#">iPhone User Guide</a></li>
         </ul>
 
-        <div class="grid">
-            <div class="item"></div>
-            <div class="item">2</div>
-          </div>
+        <h3>iPhone User Guide</h3>
 
-        <article>
-        </article>
+        <main>
+            <section>
+                <img src="image/textsize.jpg">
+                <p>In this video you will learn how to change the font size to make it bigger or smaller so it is easier for you to read the text.</p>
+            </section>
 
-        <footer>&copy;HiTech 2022</footer>
+            <section>
+                <img src="image/wifi.jpg">
+                <p>In this video you will learn how to connect to your WIFI server </p>
+            </section>
+
+            <section>
+                <img src="image/backup.jpg">
+                <p>In this video you will learn how to backup your iPhone.</p>
+            </section>
+
+            <section>
+                <img src="image/setupiPhone.png">
+                <p>In this video you will learn about how to set up your iPhone aswell as turning it on.</p>
+            </section>
+
+            <section>
+                <img src="image/appleID.jpg">
+                <p>In this video you will learn how to backup your iPhone.</p>
+            </section>
+
+            <section>
+                <img src="image/appleID.jpg">
+                <p>In this video you will learn how to send a text to your friends and family</p>
+            </section>
+        </main>  
+
+        <!-- <div class ="userguide">
+            <figure class=”gallery__item gallery__item--1">
+                <a href="iphone.html"></a><img src="image/textsize.jpg" class="gallery__img" alt="Change Text Size">
+            </figure>
+
+            <figure class="gallery__item gallery__item--2">
+                <img src="image/appleID.jpg" class="gallery__img" alt="Apple ID">
+            </figure>
+
+            <figure class="gallery__item gallery__item--3">
+                <img src="image/text.jpg" class="gallery__img" alt="Send a Text">
+            </figure>
+
+            <figure class="gallery__item gallery__item--4">
+                <img src="image/wifi.jpg" class="gallery__img" alt="Change Wifi">
+            </figure>
+
+            <figure class="gallery__item gallery__item--5">
+                <img src="image/setupiPhone.png" class="gallery__img" alt="Set Up iPhone">
+            </figure>
+
+            <figure class="gallery__item gallery__item--6">
+                <img src="image/backup.jpg" class="gallery__img" alt="Backup iPhone">
+            </figure>
+        </div> -->
+
+        <!-- <footer>&copy;HiTech 2022</footer> -->
     </div>
 </body>
 </html>
