--- a/iphone.html
+++ b/iphone.html
@@ -1,100 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HiTech</title>
-    <link rel = "preconnect" href ="https://fonts.googleapis.com">
-    <link rel ="preconnect" hred="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,700;1,300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/grid.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>HiTech</title>
+        <link rel = "preconnect" href ="https://fonts.googleapis.com">
+        <link rel ="preconnect" hred="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,700;1,300&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
 
-<!-- Jess -->
-<body>
-    <div id="container">
+    <body>
+        <div id="container">
+            <nav>
+                <img class ="logo" src="image/logo.png" alt = "logo">
+                <ul class = "nav_links">
+                    <li><a href = "index.html">Home</a></li>
+                    <li><a href = "apple.html">Apple</a></li>
+                    <li><a href = "samsung.html">Samsung</a></li>
+                </ul>
+            </nav>
 
-        <nav id = "nav">
-            <img src="image/logo.png" alt="logo" class="logo">
-            <ul>
-                <li><a href="samsung.html">Samsung</a></li>
-                <li><a href="apple.html">Apple</a></li>
+            <ul class="breadcrumb">
                 <li><a href="index.html">Home</a></li>
- 
+                <i class="arrow right"></i>
+                <li><a href="#">Apple</a></li>
+                <i class="arrow right"></i>
+                <li><a href="#">iPhone User Guide</a></li>
             </ul>
-        </nav>
 
-        <ul class="breadcrumb">
-            <li><a href="index.html">Home</a></li>
-            <i class="arrow right"></i>
-            <li><a href="#">Apple</a></li>
-            <i class="arrow right"></i>
-            <li><a href="#">iPhone User Guide</a></li>
-        </ul>
+            <h3>iPhone User Guide</h3>
 
-        <h3>iPhone User Guide</h3>
+            <main>
+                <section>
+                    <img src="image/textsize.jpg">
+                    <p>In this video you will learn how to change the font size to make it bigger or smaller so it is easier for you to read the text.</p>
+                </section>
 
-        <main>
-            <section>
-                <img src="image/textsize.jpg">
-                <p>In this video you will learn how to change the font size to make it bigger or smaller so it is easier for you to read the text.</p>
-            </section>
+                <section>
+                    <img src="image/wifi.jpg">
+                    <p>In this video you will learn how to connect to your WIFI server </p>
+                </section>
 
-            <section>
-                <img src="image/wifi.jpg">
-                <p>In this video you will learn how to connect to your WIFI server </p>
-            </section>
+                <section>
+                    <img src="image/backup.jpg">
+                    <p>In this video you will learn how to backup your iPhone.</p>
+                </section>
 
-            <section>
-                <img src="image/backup.jpg">
-                <p>In this video you will learn how to backup your iPhone.</p>
-            </section>
+                <section>
+                    <img src="image/setupiPhone.png">
+                    <p>In this video you will learn about how to set up your iPhone aswell as turning it on.</p>
+                </section>
 
-            <section>
-                <img src="image/setupiPhone.png">
-                <p>In this video you will learn about how to set up your iPhone aswell as turning it on.</p>
-            </section>
+                <section>
+                    <img src="image/appleID.jpg">
+                    <p>In this video you will learn how to backup your iPhone.</p>
+                </section>
 
-            <section>
-                <img src="image/appleID.jpg">
-                <p>In this video you will learn how to backup your iPhone.</p>
-            </section>
-
-            <section>
-                <img src="image/appleID.jpg">
-                <p>In this video you will learn how to send a text to your friends and family</p>
-            </section>
-        </main>  
-
-        <!-- <div class ="userguide">
-            <figure class=”gallery__item gallery__item--1">
-                <a href="iphone.html"></a><img src="image/textsize.jpg" class="gallery__img" alt="Change Text Size">
-            </figure>
-
-            <figure class="gallery__item gallery__item--2">
-                <img src="image/appleID.jpg" class="gallery__img" alt="Apple ID">
-            </figure>
-
-            <figure class="gallery__item gallery__item--3">
-                <img src="image/text.jpg" class="gallery__img" alt="Send a Text">
-            </figure>
-
-            <figure class="gallery__item gallery__item--4">
-                <img src="image/wifi.jpg" class="gallery__img" alt="Change Wifi">
-            </figure>
-
-            <figure class="gallery__item gallery__item--5">
-                <img src="image/setupiPhone.png" class="gallery__img" alt="Set Up iPhone">
-            </figure>
-
-            <figure class="gallery__item gallery__item--6">
-                <img src="image/backup.jpg" class="gallery__img" alt="Backup iPhone">
-            </figure>
-        </div> -->
-
+                <section>
+                    <img src="image/appleID.jpg">
+                    <p>In this video you will learn how to send a text to your friends and family</p>
+                </section>
+            </main>  
         <!-- <footer>&copy;HiTech 2022</footer> -->
-    </div>
-</body>
+        </div>
+    </body>
 </html>
