Link from iphone.html to instructions

--- a/iphone.html
+++ b/iphone.html
@@ -34,7 +34,7 @@
 
             <main>
                 <section>
-                    <img src="image/textsize.jpg">
+                    <a href="instructions.html"><img src="image/textsize.jpg"></a>
                     <p>In this video you will learn how to change the font size to make it bigger or smaller so it is easier for you to read the text.</p>
                 </section>
 
