Updated Iphone Page

--- a/iphone.html
+++ b/iphone.html
@@ -32,9 +32,19 @@
 
             <h3>iPhone User Guide</h3>
 
+            <!-- <div class="grid">
+                <a href="iphone.html"></a><img src = "image/textsize.jpg">
+                <img src = "image/backup.jpg">
+                <img src = "image/setupiPhone.png">
+                <img src = "image/text.jpg">
+                <img src = "image/appleID.jpg">
+                <img src = "image/wifi.jpg">
+              </div> -->
+
+
             <main>
                 <section>
-                    <img src="image/textsize.jpg">
+                    <a href="instructions.html"></a><img src="image/textsize.jpg">
                     <p>In this video you will learn how to change the font size to make it bigger or smaller so it is easier for you to read the text.</p>
                 </section>
 
@@ -47,7 +57,9 @@
                     <img src="image/backup.jpg">
                     <p>In this video you will learn how to backup your iPhone.</p>
                 </section>
+            </main>
 
+            <main id = two>
                 <section>
                     <img src="image/setupiPhone.png">
                     <p>In this video you will learn about how to set up your iPhone aswell as turning it on.</p>
