--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                     <li><a href = "index.html">Home</a></li>
                     <li><a href = "apple.html">Apple</a></li>
                     <li><a href = "samsung.html">Samsung</a></li>
+                    <li><a href = "instructions.html">Samsung</a></li>
+                    
                 </ul>
             </nav>
             
