as per our hi-fidility
decided to get rid of the samsung page info like the apple page due to our hi fidelity. Would be nice to add it if we continued the page like for the apple brand but due to this I think it is better to keep it as coming soon

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href = "index.html">Home</a></li>
                     <li><a href = "apple.html">Apple</a></li>
                     <li><a href = "samsung.html">Samsung</a></li>
-                    <li><a href = "instructions.html">Samsung</a></li>
+                    <li><a href = "instructions.html">apple instructions</a></li>
                     
                 </ul>
             </nav>
