--- a/samsung.html
+++ b/samsung.html
@@ -38,25 +38,16 @@
             <p>This page is to help you with your Samsung devices showing you how to back up your phone, turn your laptop on and change the text size as well as some other instructions. </p>
             </div>
 
-            <div class="flex-container-products">
-            <br>
-            <br>
-            <br><h5>
-                Here is your Samsung Galaxy S21 User Guide: Here you will find the instructions to help you with your GalaxyS21. Click the image below to see your guide.
-                </h5><div>
-                    <a href="galaxy.html"><img src="image/Galaxys21.jpg" alt="Galaxy" ></a>
+            <div class="object">
+                <div class="object-rope"></div>
+                <div class="object-shape">
+                  Coming <span class="soon">Soon</span>
                 </div>
-                <h5>
-                Here is your Samsung "The Frame" Tv User Guide: Here you will find the instructions to help you with your Television. Click the image below to see your guide.
-                </h5><div>
-                    <img src="image/TheFrame.png" alt="Frame" >
-                </div>
-                
-                <h5>Here is your Samsung Glaxay Tab A8 User Guide: Here you will find the instructions to help you with your Tablet. Click the image below to see your guide.
-                </h5>
-                <div>
-                    <img src="image/GalaxyTab.jpg" alt="GalaxyTablet" >
-                </div>  
+            </div>
+            
+            <div class="content">
+              <p class="message">This page is currently under construction. Please come back later .</p>
+
             </div>
         </article>
         </div>
