--- a/index.html
+++ b/index.html
@@ -36,6 +36,29 @@
     
             <h3>Supported Brands</h3>
 
+            <div class="flex-container-products">
+                <br>
+                <br>
+                <br>
+                <!-- Iphone User Guide -->
+                <p>>Here is your iPhone User Guide: Here you will find the instructions to help you with your iPhone. Click the image below to see your guide.</p>
+                <div>
+                    <a href="iphone.html"><img src="image/iphone.png" alt="Iphone" ></a>
+                </div>
+
+                <!-- iPad User Guide -->
+                <p>Here is your iPad User Guide: Here you will find the instructions to help you with your iPad. Click the image below to see your guide.</p>
+                <div>
+                    <img src="image/ipad.png" alt="Iphone" >
+                </div>
+
+                <!-- iMac User Guide -->
+                <p>Here is your iMac User Guide: Here you will find the instructions to help you with your iMac. Click the image below to see your guide.</p>
+                <div>
+                    <img src="image/mac.png" alt="Iphone" >
+                </div>  
+            </div>
+
             <footer>&copy;HiTech 2022</footer>
         </div>
     </body>
