--- a/apple.html
+++ b/apple.html
@@ -47,7 +47,7 @@
                     <br>
                     <br>
                     <!-- Iphone User Guide -->
-                    <p>>Here is your iPhone User Guide: Here you will find the instructions to help you with your iPhone. Click the image below to see your guide.</p>
+                    <p>Here is your iPhone User Guide: Here you will find the instructions to help you with your iPhone. Click the image below to see your guide.</p>
                     <div>
                         <a href="iphone.html"><img src="image/iphone.png" alt="Iphone" ></a>
                     </div>
