Trying to make the grid clickable to the instructions page

--- a/iphone.html
+++ b/iphone.html
@@ -37,11 +37,11 @@
         <div class="grid">
             <div class="item"> 
                 Hello 
-            <img src="image/text.jpg" class="grid-images">
+                <a href="instructions.html"><img src="image/textsize.jpg" class="grid-images">
              <br> <br> <!--This needs to stay here so the title and the text dont combine -->
             In this video you will learn how to change the font size to make it bigger or smaller so it is easier for you to read the text.
-            
-        </div>
+            </div>
+
             <div class="item">
                 Hello 
                 <img src="image/apple.png" class="grid-images">
