Fixed up some nav names

--- a/instructions.html
+++ b/instructions.html
@@ -20,7 +20,7 @@
             <li><a href = "index.html">Home</a></li>
             <li><a href = "apple.html">Apple</a></li>
             <li><a href = "samsung.html">Samsung</a></li>
-            <li><a href = "instructions.html">instructions</a></li>
+            <li><a href = "instructions.html">Apple instructions</a></li>
         </ul>
       </nav>
 
@@ -29,12 +29,12 @@
         <i class="arrow right"></i>
         <li><a href="apple.html">Apple</a></li>
         <i class="arrow right"></i>
-        <li><a href="iphone.html">Iphone</a></li>
+        <li><a href="iphone.html">iPhone User Guide</a></li>
         <i class="arrow right"></i>
         <li><a href="instructions.html">How to change font size</a></li>
       </ul>
   
-      <h3>How to change the font size</h3>
+      <h3>How to change the font size on an Apple iPhone</h3>
       <article>
 
         <video width="1130" controls>
