--- a/iphone.html
+++ b/iphone.html
@@ -21,7 +21,7 @@
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "apple.html">Apple</a></li>
                 <li><a href = "samsung.html">Samsung</a></li>
-                <li><a href = "instructions.html">apple instructions</a></li>
+                <li><a href = "instructions.html">Apple instructions</a></li>
                 
             </ul>
         </nav>
@@ -29,7 +29,7 @@
         <ul class="breadcrumb">
             <li><a href="index.html">Home</a></li>
             <i class="arrow right"></i>
-            <li><a href="#">Apple</a></li>
+            <li><a href="apple.html">Apple</a></li>
             <i class="arrow right"></i>
             <li><a href="#">iPhone User Guide</a></li>
         </ul>
