Updated iphone Page

--- a/iphone.html
+++ b/iphone.html
@@ -21,7 +21,6 @@
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "apple.html">Apple</a></li>
                 <li><a href = "samsung.html">Samsung</a></li>
-                <li><a href = "instructions.html">apple instructions</a></li>
                 
             </ul>
         </nav>
@@ -36,37 +35,46 @@
 
         <div class="grid">
             <div class="item"> 
-                Hello 
+                <h2>Change the Font Size</h2>
                 <a href="instructions.html"><img src="image/textsize.jpg" class="grid-images" a href="instructions.html"></a>
-             <br> <br> <!--This needs to stay here so the title and the text dont combine -->
-            In this video you will learn how to change the font size to make it bigger or smaller so it is easier for you to read the text.
+                  <!--This needs to stay here so the title and the text dont combine -->
+                <p>In this video you will learn how to change the font size to make it bigger or smaller so it is easier for you to read the text. </p>
             </div>
 
             <div class="item">
-                Hello 
-                <img src="image/apple.png" class="grid-images">
+                <h2>Connect to the WIFI</h2> 
+                <img src="image/wifi.jpg" class="grid-images">
                 <br> <br>
-                In this video you will learn how to connect to your WIFI server .</div>
+                <p>In this video you will learn how to connect to your WIFI server .</p>
+            </div>
+
             <div class="item">
-                Hello
-                <img src="image/apple.png" class="grid-images">
+                <h2>Set up iPhone</h2>
+                <img src="image/setupiPhone.png" class="grid-images">
                 <br> <br>
-                In this video you will learn about how to set up your iPhone aswell as turning it on.</div>
+                <p>In this video you will learn about how to set up your iPhone aswell as turning it on.</p>
+            </div>
+
             <div class="item">
-                Hello 
-                <img src="image/apple.png" class="grid-images">
+                <h2>Create Apple ID and Use iCloud</h2> 
+                <img src="image/appleID.jpg" class="grid-images">
                 <br> <br>
-                In this video you will learn how to backup your iPhone.</div>
+                In this video you will learn how to backup your iPhone.
+            </div>
+
             <div class="item">
-                Hello 
-                <img src="image/apple.png" class="grid-images">
+                <h2>Back up iPhone</h2>
+                <img src="image/backup.jpg" class="grid-images">
                 <br> <br>
-                In this video you will learn how to backup your iPhone pt2</div>
+                In this video you will learn how to backup your iPhone pt2
+            </div>
+
             <div class="item">
-                Hello 
-                <img src="image/apple.png" class="grid-images">
+                <h2>Send a text message</h2> 
+                <img src="image/text.jpg" class="grid-images">
                 <br> <br>
-                In this video you will learn how to send a text to your friends and family..</div>
+                In this video you will learn how to send a text to your friends and family.
+            </div>
 
         <footer>&copy;HiTech 2022</footer>
     </div>
