--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
             <div class = "border">
                 <p>This website is to help you with your devices and instructions showing you how to back up your phone, turn your laptop on and change the text size as well as some other instructions. </p>
             </div>
-    
-            <h3>Supported Brands</h3>
+            
+            <br>
+            <br>
+            <h3 id = "brand">Supported Brands</h3>
 
             <div class="home">
                 <div class="item-home"> 
@@ -52,8 +54,8 @@
                 <div class="item-home">
                     <img src="image/handy.png" class="home-images">
                 </div>
-                <footer>&copy;HiTech 2022</footer>
         </div>
+        <footer>&copy;HiTech 2022</footer>
     </body>
     <script src="js/carousel.js"></script>
 </html>
