--- a/iphone.html
+++ b/iphone.html
@@ -1,82 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HiTech</title>
-    <link rel = "preconnect" href ="https://fonts.googleapis.com">
-    <link rel ="preconnect" hred="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,700;1,300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/grid.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>HiTech</title>
+        <link rel = "preconnect" href ="https://fonts.googleapis.com">
+        <link rel ="preconnect" hred="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,700;1,300&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/grid.css">
+    </head>
 
 <!-- Jess -->
-<body>
-    <div id="container">
-        <nav>
-            <img class ="logo" src="image/logo.png" alt = "logo">
-            <ul class = "nav_links">
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "apple.html">Apple</a></li>
-                <li><a href = "samsung.html">Samsung</a></li>
-                
+    <body>
+        <div id="container">
+            <nav>
+                <img class ="logo" src="image/logo.png" alt = "logo">
+                <ul class = "nav_links">
+                    <li><a href = "index.html">Home</a></li>
+                    <li><a href = "apple.html">Apple</a></li>
+                    <li><a href = "samsung.html">Samsung</a></li>
+                </ul>
+            </nav>
+
+            <ul class="breadcrumb">
+                <li><a href="index.html">Home</a></li>
+                <i class="arrow right"></i>
+                <li><a href="apple.html">Apple</a></li>
+                <i class="arrow right"></i>
+                <li><a href="#">iPhone User Guide</a></li>
             </ul>
-        </nav>
 
-        <ul class="breadcrumb">
-            <li><a href="index.html">Home</a></li>
-            <i class="arrow right"></i>
-            <li><a href="apple.html">Apple</a></li>
-            <i class="arrow right"></i>
-            <li><a href="#">iPhone User Guide</a></li>
-        </ul>
+            <div class="grid">
+                <div class="item"> 
+                    <h2>Change the Font Size</h2>
+                    <a href="instructions.html"><img src="image/textsize.jpg" class="grid-images" a href="instructions.html"></a>
+                    <p>In this video you will learn how to change the font size to make it bigger or smaller so it is easier for you to read the text.</p>
+                </div>
 
-        <div class="grid">
-            <div class="item"> 
-                <h2>Change the Font Size</h2>
-                <a href="instructions.html"><img src="image/textsize.jpg" class="grid-images" a href="instructions.html"></a>
-                  <!--This needs to stay here so the title and the text dont combine -->
-                <p>In this video you will learn how to change the font size to make it bigger or smaller so it is easier for you to read the text. </p>
-            </div>
+                <div class="item">
+                    <h2>Connect to the WIFI</h2> 
+                    <img src="image/wifi.jpg" class="grid-images">
+                    <br> <br>
+                    <p>In this video you will learn how to connect to your WIFI server .</p>
+                </div>
 
-            <div class="item">
-                <h2>Connect to the WIFI</h2> 
-                <img src="image/wifi.jpg" class="grid-images">
-                <br> <br>
-                <p>In this video you will learn how to connect to your WIFI server .</p>
-            </div>
+                <div class="item">
+                    <h2>Set up iPhone</h2>
+                    <img src="image/setupiPhone.png" class="grid-images">
+                    <br> <br>
+                    <p>In this video you will learn about how to set up your iPhone aswell as turning it on.</p>
+                </div>
 
-            <div class="item">
-                <h2>Set up iPhone</h2>
-                <img src="image/setupiPhone.png" class="grid-images">
-                <br> <br>
-                <p>In this video you will learn about how to set up your iPhone aswell as turning it on.</p>
-            </div>
+                <div class="item">
+                    <h2>Create Apple ID and Use iCloud</h2> 
+                    <img src="image/appleID.jpg" class="grid-images">
+                    <br> <br>
+                    <p>In this video you will learn how to backup your iPhone.</p>
+                </div>
 
-            <div class="item">
-                <h2>Create Apple ID and Use iCloud</h2> 
-                <img src="image/appleID.jpg" class="grid-images">
-                <br> <br>
-                In this video you will learn how to backup your iPhone.
-            </div>
+                <div class="item">
+                    <h2>Back up iPhone</h2>
+                    <img src="image/backup.jpg" class="grid-images">
+                    <br> <br>
+                    <p>In this video you will learn how to backup your iPhone.</p>
+                </div>
 
-            <div class="item">
-                <h2>Back up iPhone</h2>
-                <img src="image/backup.jpg" class="grid-images">
-                <br> <br>
-                In this video you will learn how to backup your iPhone pt2
-            </div>
-
-            <div class="item">
-                <h2>Send a text message</h2> 
-                <img src="image/text.jpg" class="grid-images">
-                <br> <br>
-                In this video you will learn how to send a text to your friends and family.
-            </div>
-
+                <div class="item">
+                    <h2>Send a text message</h2> 
+                    <img src="image/text.jpg" class="grid-images">
+                    <br> <br>
+                    <p>In this video you will learn how to send a text to your friends and family.</p>
+                </div>
+        </div>
         <footer>&copy;HiTech 2022</footer>
-    </div>
-</body>
+    </body>
 </html>
