--- a/apple.html
+++ b/apple.html
@@ -33,7 +33,7 @@
             <article>
                 <div class="carousel" >
                     <img id = "rotate" name="slide" width="auto">
-                    <h3>Device User Guide</h3>
+                    <h3>Apple Device User Guide</h3>
                     <p>Here you will find the instructions to help you with your device issues</p>
                 </div>
 
