--- a/iphone.html
+++ b/iphone.html
@@ -32,6 +32,8 @@
                 <li><a href="#">iPhone User Guide</a></li>
             </ul>
 
+            <h3 id = "phone">iPhone User Guide</h3>
+
             <div class="grid">
                 <div class="item"> 
                     <h2>Change the Font Size</h2>
