Changed colour on instructions

--- a/instructions.html
+++ b/instructions.html
@@ -44,10 +44,10 @@
         <div class = "instructionsBorder">
           <ol class = "fourStep">
             <b>Four step process</b>
-            <li><b> First step is to go into the settings menu</b></li>
-            <li><b> Scroll down and click on Display and Brightness</b></li>
-            <li><b> Then select text size</b></li>
-            <li><b> Drag the slider up or down to select the font size you want</b></li>
+            <li id = "list"><p> First step is to go into the settings menu</p></li>
+            <li id = "list"><p> Scroll down and click on Display and Brightness</p></li>
+            <li id = "list"><p> Then select text size</p></li>
+            <li id = "list"><p> Drag the slider up or down to select the font size you want</p></li>
           </ol>
         </div>
       </article>
